# swift3

./: .travis.yml  requirements.txt  setup.cfg  stdeb.cfg  test-requirements.txt  tox.ini
doc/rnc/: cors_configuration.rnc
etc/: iam_rules.json  proxy-server.conf-sample
swift3/: __init__.py  acl_handlers.py  bucket_db.py  cfg.py  etree.py  exception.py  iam.py  middleware.py  request.py  response.py  s3_token_middleware.py  subresource.py  utils.py
swift3/controllers/: __init__.py  acl.py  bucket.py  cors.py  lifecycle.py  location.py  multi_delete.py  multi_upload.py  obj.py  s3_acl.py  service.py  tagging.py  unique_bucket.py  versioning.py
swift3/schema/: cors_configuration.rng
swift3/test/functional/: run_test.sh  test_bucket.py  test_multi_delete.py  test_multi_upload.py  test_object.py
swift3/test/functional/conf/: ceph-known-failures-keystone.yaml  ceph-known-failures-tempauth.yaml
swift3/test/unit/: __init__.py  helpers.py  test_bucket.py  test_bucket_db.py  test_cors.py  test_iam.py  test_middleware.py  test_multi_delete.py  test_multi_upload.py  test_obj.py  test_request.py  test_response.py  test_s3_acl.py  test_s3_token_middleware.py  test_swift3.py  test_tagging.py  test_versioning.py
