[metadata]
name = swift3
version = 1.8.0
summary = Swift AmazonS3 API emulation Middleware
description-file =
    README.md
author = OpenStack Foundation
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/stackforge/swift3
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    swift3
extra_files =
    swift3/schema/access_control_policy.rng
    swift3/schema/bucket_logging_status.rng
    swift3/schema/common.rng
    swift3/schema/complete_multipart_upload.rng
    swift3/schema/complete_multipart_upload_result.rng
    swift3/schema/copy_object_result.rng
    swift3/schema/copy_part_result.rng
    swift3/schema/create_bucket_configuration.rng
    swift3/schema/delete.rng
    swift3/schema/delete_result.rng
    swift3/schema/error.rng
    swift3/schema/initiate_multipart_upload_result.rng
    swift3/schema/lifecycle_configuration.rng
    swift3/schema/list_all_my_buckets_result.rng
    swift3/schema/list_bucket_result.rng
    swift3/schema/list_multipart_uploads_result.rng
    swift3/schema/list_parts_result.rng
    swift3/schema/list_versions_result.rng
    swift3/schema/location_constraint.rng
    swift3/schema/versioning_configuration.rng

[entry_points]
paste.filter_factory =
    swift3 = swift3.middleware:filter_factory

[nosetests]
exe = 1
verbosity = 2
detailed-errors = 1
cover-package = swift3
cover-html = true
cover-erase = true
